<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BrickRack2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="cat_0">0</string>
    <string name="cat_1">1</string>
    <string name="cat_2">2</string>
    <string name="cat_3">3</string>
    <string name="cat_4">4</string>

</resources>