<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/cat0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cat_0"
            android:src="@drawable/cat0" />

        <ImageView
            android:id="@+id/cat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cat_1"
            android:src="@drawable/cat1" />

        <ImageView
            android:id="@+id/cat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cat_2"
            android:src="@drawable/cat2" />

        <ImageView
            android:id="@+id/cat3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cat_3"
            android:src="@drawable/cat3" />

        <ImageView
            android:id="@+id/cat4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cat_4"
            android:src="@drawable/cat4" />
    </LinearLayout>

</HorizontalScrollView>